load file modified index.html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <section class="contenedor nav">
                 <div class="enlaces-header">
                     <a href="" class="#0inicio">inicio</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
+                    <a href="#">Informacion</a>
+                    <a href="#">Acerca de </a>
+                    <a href="#">Contacto </a>
+                    
                 </div>
                 <div class="hamburguer"></div>
             </section>
