load file modified index.html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <section class="contenedor nav">
                 <div class="enlaces-header">
                     <a href="" class="#0inicio">inicio</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
-                    <a href="#">xxxxx</a>
+                    <a href="#">informacion</a>
+                    <a href="#">Acerca de </a>
+                    <a href="#">Contacto</a>
+                    
                 </div>
                 <div class="hamburguer"></div>
             </section>
@@ -52,7 +51,7 @@
                 <div class="articulo">
                     <i></i>
                     <h1>Educacion Basica Primaria</h1>
-                    <p> Colegio Catolico Santo Domingo Savio<p>
+                    <p> Colegio Catolico Santo Domingo <p>
                     <p>2016</p>
                     <a href="#" target="_parent">Ver mas informacion</a>
                 </div>
